@@ -3120,7 +3120,7 @@ rb_file_s_extname(VALUE klass, VALUE fname)
 		p = last;
 		break;
 	    }
-	    e = dot;
+	    if (*last == '.') e = dot;
 	    continue;
 #else
 	    e = p;	  /* get the last dot of the last component */
