@@ -257,6 +257,10 @@ static struct {
 } native_main_thread;
 #endif
 
+#ifdef STACK_END_ADDRESS
+extern void *STACK_END_ADDRESS;
+#endif
+
 #undef ruby_init_stack
 void
 ruby_init_stack(VALUE *addr
@@ -267,12 +271,16 @@ ruby_init_stack(VALUE *addr
 {
 #ifndef STACKADDR_AVAILABLE
     native_main_thread.id = pthread_self();
+#ifdef STACK_END_ADDRESS
+    native_main_thread.stack_start = STACK_END_ADDRESS;
+#else
     if (!native_main_thread.stack_start ||
         STACK_UPPER(&addr,
                     native_main_thread.stack_start > addr,
                     native_main_thread.stack_start < addr)) {
         native_main_thread.stack_start = addr;
     }
+#endif
 #ifdef __ia64
     if (!native_main_thread.register_stack_start ||
         (VALUE*)bsp < native_main_thread.register_stack_start) {
